--- a/app/comp/section2/section2.module.css
+++ b/app/comp/section2/section2.module.css
@@ -1,24 +1,22 @@
 .section2 {
   position: relative;
   width: 100%;
-  height: 1800px;
+  height: 140svh;
   background: linear-gradient(to bottom, #e2d3ce 0%, #d2d7c6 50%);
- 
 }
 
 .backgroundImage {
   position: absolute;
+  top: 100%;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 981px;
-  background-image: url('/comp_2/bg_comp_222.png');
+  height: 68.13vh;
+  background-image: url("/comp_2/bg_comp_222.png");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
-  
-  
-} 
+}
 
 .blurredSpot {
   position: absolute;
@@ -26,26 +24,31 @@
   left: -10%;
   width: 700px;
   height: 100px;
-  background: radial-gradient(circle, rgba(52, 43, 226, 0.6) 0%, rgba(30, 0, 130, 0.4) 50%, rgba(129, 32, 220, 0.2) 100%);
+  background: radial-gradient(
+    circle,
+    rgba(52, 43, 226, 0.6) 0%,
+    rgba(30, 0, 130, 0.4) 50%,
+    rgba(129, 32, 220, 0.2) 100%
+  );
   border-radius: 50%;
   filter: blur(140px);
   z-index: 2;
 }
 
-
 .centerImage {
-position: absolute;
-top: 40%;
-width:100%;
-height: 600px;
-transform: rotate(180.00deg);
-background: linear-gradient(180.00deg, rgba(226, 211, 206, 0),rgba(144.81875610351562, 199.75, 186.56651306152344, 1) 41%,rgba(211, 215, 198, 1) 100%);
-z-index: 3;
+  position: absolute;
+  top: 88%;
+  width: 100%;
+  height: 30vh;
+  transform: rotate(180deg);
+  background: linear-gradient(
+    180deg,
+    rgba(226, 211, 206, 0),
+    rgba(144.81875610351562, 199.75, 186.56651306152344, 1) 41%,
+    rgba(211, 215, 198, 1) 100%
+  );
+  z-index: 3;
 }
-
-
-
-
 
 /* Luxury Packages Block */
 .luxuryBlock {
@@ -141,16 +144,15 @@ z-index: 3;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
- 
 }
 
 .verticalLabel {
   position: absolute;
   top: 60px;
   left: 50%;
-  color:  rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 1);
   transform: translateX(-50%);
   font-family: Forum;
   font-size: 36px;
@@ -161,23 +163,21 @@ z-index: 3;
 }
 
 .diamondWrap {
-   position: absolute;
+  position: absolute;
   bottom: 120px;
   left: 50%;
-  transform: translateX(-50%); 
-  
+  transform: translateX(-50%);
 }
 
 .diamondOuter {
-   position: relative;
-  width: 257px; 
-  height: 135px; 
-  transform: rotate(90.00deg);
-  
+  position: relative;
+  width: 257px;
+  height: 135px;
+  transform: rotate(90deg);
+
   display: flex;
   align-items: center;
-  justify-content: center; 
- 
+  justify-content: center;
 }
 
 .diamondInner {
@@ -188,35 +188,31 @@ z-index: 3;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 231px; 
-  height: 121px; 
+  width: 231px;
+  height: 121px;
   backdrop-filter: blur(20px);
   background-color: rgba(145, 145, 145, 0.14);
   clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
 
-
 .diamondContent {
   transform: rotate(-90deg);
   text-align: center;
-  color:  rgba(255, 255, 255, 1);
-   font-family: Forum;
-   font-weight: 400;
- 
+  color: rgba(255, 255, 255, 1);
+  font-family: Forum;
+  font-weight: 400;
 }
 
 .count {
   font-size: 46px;
-  
+
   line-height: 1;
 }
 
 .places {
- 
   margin-top: 4px;
   font-size: 16px;
   letter-spacing: 1px;
-  
 }
 .arrow_block {
   margin-top: 10px;
@@ -224,116 +220,206 @@ z-index: 3;
 .arrow {
   position: relative;
   top: 0;
- 
 }
 .arrowLine {
   position: absolute;
   top: 4px;
- left: -5px;
+  left: -5px;
   width: 12px;
   height: 0;
   border-top: 1px solid rgba(255, 255, 255, 1);
- 
 }
 
-.card1 { right: 160px; top: 240px; }
-.card2 { right: 160px; top: calc(240px + 570px + 30px); }
+.card1 {
+  right: 160px;
+  top: 240px;
+}
+.card2 {
+  right: 160px;
+  top: calc(240px + 570px + 30px);
+}
 
 /* Two cards to the left: 30px left from those and 120px lower */
-.card3 { right: calc(160px + 350px + 30px); top: calc(240px + 120px); }
-.card4 { right: calc(160px + 350px + 30px); top: calc(240px + 120px + 570px + 30px); }
+.card3 {
+  right: calc(160px + 350px + 30px);
+  top: calc(240px + 120px);
+}
+.card4 {
+  right: calc(160px + 350px + 30px);
+  top: calc(240px + 120px + 570px + 30px);
+}
 
 /* One more to the left: 30px left from them and 370px lower */
-.card5 { right: calc(160px + 350px + 30px + 350px + 30px); top: calc(240px + 120px + 370px); }
+.card5 {
+  right: calc(160px + 350px + 30px + 350px + 30px);
+  top: calc(240px + 120px + 370px);
+}
 
 
 
 
 
-@media (min-width: 1536px) {
+
+
+
+@media (min-width: 2000px) and (max-width: 2300px) {
+  .section2 {
+   
+    height: 150svh;
+  
+  }
+  .backgroundImage {
+  
+    top: 64%;
+ 
+    min-height: 1500px;
+    height: 30svh;
+   
+  }
+  
+
+  
   .centerImage {
-    height: 360px;
+   
+    top: 65%;
+    
+    height: 35vh;
+    
+  }
+} 
+
+@media (min-width: 1600px) and (max-width: 2000px) {
+  .section2 {
+   
+    height: 150svh;
+  
+  }
+  .backgroundImage {
+  
+    top: 68%;
+ 
+    min-height: 1300px;
+    height: 30svh;
+   
+  }
+  
+
+  
+  .centerImage {
+   
+    top: 68%;
+    
+    height: 35vh;
+    
+  }
+} 
+@media (min-width: 1440px) and (max-width: 1600px){
+  .section2 {
+   
+    height: 150svh;
+  
+  }
+  .backgroundImage {
+  
+    top: 100%;
+   
+   
+    height: 68.13svh;
+   
+  }
+  
+
+  
+  .centerImage {
+   
+    top: 88%;
+    
+    height: 30vh;
+    
   }
 }
 
-@media (min-width: 1920px) {
-  .centerImage {
-    height: 220px;
+@media (max-width: 1350px) {
+  .section2 {
+    height: 120svh;
   }
-}
-@media (min-width: 1460px) {
-  .centerImage {
-    display: block;
+  .backgroundImage {
+    
+    height: 50%;
   }
-}
 
-/* Адаптивность для экранов меньше 1350px */
-@media (max-width: 1349px) {
+  .centerImage {
+    top: 85%;
+
+    height: 30vh;
+  }
   .cardsContainer {
-   
-   top: -4vh;
-   
+    top: -7svh;
   }
   .card {
     width: 280px;
     height: 456px;
   }
-  
+
   .verticalLabel {
     font-size: 28px;
     line-height: 32px;
     top: 48px;
   }
-  
+
   .diamondOuter {
     width: 205px;
     height: 108px;
   }
-  
+
   .diamondInner {
     width: 184px;
     height: 96px;
   }
-  
+
   .count {
     font-size: 36px;
   }
-  
+
   .places {
     font-size: 14px;
   }
-  
-  /* .arrow {
-    width: 11px;
+
+  .card1 {
+    right: 128px;
+    top: 192px;
   }
-  
-  .arrowLine {
-    left: 5px;
-    width: 10px;
-  } */
-  
-  /* Пересчитываем позиции карточек */
-  .card1 { right: 128px; top: 192px; }
-  .card2 { right: 128px; top: calc(192px + 456px + 24px); }
-  
-  .card3 { right: calc(128px + 280px + 24px); top: calc(192px + 96px); }
-  .card4 { right: calc(128px + 280px + 24px); top: calc(192px + 96px + 456px + 24px); }
-  
-  .card5 { right: calc(128px + 280px + 24px + 280px + 24px); top: calc(192px + 96px + 296px); }
-  
-  /* Уменьшаем размеры других элементов */
+  .card2 {
+    right: 128px;
+    top: calc(192px + 456px + 24px);
+  }
+
+  .card3 {
+    right: calc(128px + 280px + 24px);
+    top: calc(192px + 96px);
+  }
+  .card4 {
+    right: calc(128px + 280px + 24px);
+    top: calc(192px + 96px + 456px + 24px);
+  }
+
+  .card5 {
+    right: calc(128px + 280px + 24px + 280px + 24px);
+    top: calc(192px + 96px + 296px);
+  }
+
   .luxuryTitle,
   .luxurySubtitle,
   .luxurySubtitle h3 {
     font-size: 48px;
     line-height: 46px;
   }
-  
+
   .luxuryBlock {
     left: 136px;
     top: 288px;
   }
-  
+
   .blurredSpot {
     width: 560px;
     height: 80px;
@@ -343,32 +429,40 @@ z-index: 3;
   }
 }
 
-/* Адаптивные стили для больших планшетов */
+
 @media (max-width: 1200px) {
-  .section2 {
-    height: 1600px;
+ 
+  .backgroundImage {
+    top: 75%;
+    height: 40%;
   }
-  
+
+  .centerImage {
+    top: 65%;
+
+    height: 30vh;
+  }
+
   .luxuryBlock {
     left: 120px;
     top: 250px;
   }
-  
+
   .luxuryTitle,
   .luxurySubtitle,
   .luxurySubtitle h3 {
     font-size: 48px;
     line-height: 46px;
   }
-  
+
   .backgroundImage {
     height: 800px;
   }
-  
+
   .centerImage {
     height: 500px;
   }
-  
+
   .blurredSpot {
     width: 600px;
     height: 80px;
@@ -376,61 +470,90 @@ z-index: 3;
   }
   .viewAllButton {
     margin-top: 20px;
+  }
 }
-}
-/* Адаптивность для экранов меньше 1100px */
-@media (max-width: 1099px) {
+
+
+
+
+@media (max-width: 1100px) {
+  .section2 {
+    height: 102svh;
+  }
+  .backgroundImage {
+    top: 66%;
+    min-height: 450px;
+  }
+
+  .centerImage {
+    top: 67%;
+
+    height: 30vh;
+  }
   .cardsContainer {
-   
-   
-   }
+  }
   .card {
     width: 224px;
     height: 365px;
   }
-  
+
   .verticalLabel {
     font-size: 22px;
     line-height: 26px;
     top: 38px;
   }
-  
+
   .diamondOuter {
     width: 164px;
     height: 86px;
   }
-  
+
   .diamondInner {
     width: 147px;
     height: 77px;
   }
-  
+
   .count {
     font-size: 28px;
   }
-  
+
   .places {
     font-size: 12px;
   }
-  
+
   .arrow {
     width: 10px;
   }
-  
+
   .arrowLine {
     left: -1px;
     width: 10px;
   }
-  
+
   /* Пересчитываем позиции карточек */
-  .card1 { right: 102px; top: 154px; }
-  .card2 { right: 102px; top: calc(154px + 365px + 20px); }
-  
-  .card3 { right: calc(102px + 224px + 20px); top: calc(154px + 77px); }
-  .card4 { right: calc(102px + 224px + 20px); top: calc(154px + 77px + 365px + 20px); }
-  
-  .card5 { right: calc(102px + 224px + 20px + 224px + 20px); top: calc(154px + 77px + 237px); }
-  
+  .card1 {
+    right: 102px;
+    top: 154px;
+  }
+  .card2 {
+    right: 102px;
+    top: calc(154px + 365px + 20px);
+  }
+
+  .card3 {
+    right: calc(102px + 224px + 20px);
+    top: calc(154px + 77px);
+  }
+  .card4 {
+    right: calc(102px + 224px + 20px);
+    top: calc(154px + 77px + 365px + 20px);
+  }
+
+  .card5 {
+    right: calc(102px + 224px + 20px + 224px + 20px);
+    top: calc(154px + 77px + 237px);
+  }
+
   /* Уменьшаем размеры других элементов */
   .luxuryTitle,
   .luxurySubtitle,
@@ -438,98 +561,124 @@ z-index: 3;
     font-size: 38px;
     line-height: 36px;
   }
-  
+
   .luxuryBlock {
     left: 109px;
     top: 230px;
   }
-  
+
   .blurredSpot {
     width: 448px;
     height: 64px;
   }
 }
 
-/* Адаптивность для экранов меньше 880px  */
+
 
 @media (max-width: 880px) {
-  .card {
-  margin-top: 100px;
+  /* .section2 {
+    height: 102svh;
   }
- 
-  
-  
+  .backgroundImage {
+    top: 66%;
+    min-height: 450px;
+  }
+
+  .centerImage {
+    top: 67%;
+
+    height: 30vh;
+  } */
+  /* .card {
+    margin-top: 100px;
+  }
+
   .card5 {
     display: none;
   }
-  
-  
+
   .luxuryBlock {
     left: 20%;
-    /* transform: translateX(-50%); */
+   
     top: 50px;
-    /* text-align:center; */
-  }
-  
-  .blurredSpot {
+   
+  } */
+
+  /* .blurredSpot {
     filter: blur(53px);
     top: 130px;
     width: 400px;
     height: 100px;
     left: 20%;
     transform: translateX(-50%);
-  }
- 
+  } */
 }
-
-
 
 @media (max-width: 900px) {
   .section2 {
-    height: 1400px;
+    height: 95svh;
   }
-  
+  .card5 {
+    display: none;
+  }
   .luxuryBlock {
     left: 80px;
-    top: 120px;
+    top: 0%;
   }
-  
+
   .luxuryTitle,
   .luxurySubtitle,
   .luxurySubtitle h3 {
     font-size: 40px;
     line-height: 38px;
   }
-  
+
   .backgroundImage {
-    height: 700px;
+    top: 66%;
+    min-height: 350px;
   }
-  
+
   .centerImage {
-    height: 400px;
+    top: 67%;
+
+    height: 30vh;
   }
-  
+
   .blurredSpot {
     width: 500px;
     height: 60px;
     top: 200px;
   }
-
 }
 
 @media (max-width: 768px) {
   .section2 {
-    height: 1300px;
+    height: 95svh;
   }
-  
+  .backgroundImage {
+    top: 66%;
+   
+    min-height: 450px;
+  }
+
+  .centerImage {
+    top: 67%;
+
+    height: 30vh;
+  }
   .luxuryBlock {
-    left: 30%;
+    left: 80px;
+    top: 0%;
+  }
+
+  .luxuryBlock {
+    left: 25%;
     transform: translateX(-50%);
-    top: 110px;
+    top: 0;
     text-align: center;
     align-items: center;
   }
-  
+
   .luxuryTitle,
   .luxurySubtitle,
   .luxurySubtitle h3 {
@@ -537,15 +686,9 @@ z-index: 3;
     line-height: 34px;
     text-align: center;
   }
+
   
-  .backgroundImage {
-    height: 600px;
-  }
-  
-  .centerImage {
-    height: 300px;
-  }
-  
+
   .blurredSpot {
     width: 400px;
     height: 50px;
@@ -553,36 +696,40 @@ z-index: 3;
   }
 }
 
-@media (max-width: 649px) {
+@media (max-width: 650px) {
   .section2 {
-    height: 1200px;
+    height: 75svh
   }
-  
-.centerImage {
-  
-  background: none;
-  
+  .backgroundImage {
+    top: 66%;
+   height: 20svh;
+    min-height: 450px;
   }
+
+  .centerImage {
+    top: 67%;
+ background: none;
+    height: 30vh;
+  }
+ 
   .cardsContainer {
-    
     position: relative;
     top: 0;
     left: 2vh;
     height: 900px;
     z-index: 8;
   }
-  
+
   /* Скрываем десктопные карточки */
   .desktopCards {
     display: none;
   }
-  
+
   /* Показываем мобильную карусель */
   .mobileCarousel {
-  
     display: block;
   }
-  
+
   /* Адаптируем другие элементы */
   .luxuryTitle,
   .luxurySubtitle,
@@ -590,23 +737,22 @@ z-index: 3;
     font-size: 38px;
     line-height: 26px;
   }
-  
+
   .luxuryBlock {
     left: 50%;
     transform: translateX(-50%);
-    top: 80px;
+    top: 5%;
     text-align: left;
     display: flex;
     flex-direction: column;
-  
+
     align-items: flex-start;
   }
-  
+
   .luxuryTitle {
     /* margin-bottom: 10px; */
-   
   }
-  
+
   .luxurySubtitle {
     /* margin-bottom: 0; */
     display: flex;
@@ -614,80 +760,83 @@ z-index: 3;
     /* gap: 20px; */
     width: 100%;
   }
-  
+
   .viewAllButton {
     margin-left: 100px;
     /* align-self: flex-start;
     margin-bottom: 0; */
   }
-  
+
   .blurredSpot {
     filter: blur(40px);
-    top: 140px;
+    top: 10%;
     width: 600px;
     height: 40px;
     left: 50%;
     transform: translateX(-50%);
   }
-  
-  .centerImage {
+
+  /* .centerImage {
     height: 200px;
   }
-  
+
   .backgroundImage {
     height: 600px;
-  }
+  } */
   .arrow {
-  
-  
     width: 15px;
     height: auto;
   }
   .arrowLine {
-
     top: 5px;
-   left: 4px;
+    left: 4px;
     width: 12px;
-    
-   
-    
   }
-
 }
 
 /* Дополнительные стили для очень маленьких экранов */
 @media (max-width: 480px) {
   .section2 {
-    height: 1100px;
+    height: 75svh;
   }
- 
+  .backgroundImage {
+    top: 75%;
+   height: 22svh;
+    min-height: 350px;
+  }
+
+  .centerImage {
+    top: 67%;
+ background: none;
+    height: 30vh;
+  }
   .luxuryBlock {
-    top: 100px;
+    top: 5%;
     width: 90%;
   }
-  
+
   .luxuryTitle,
   .luxurySubtitle,
   .luxurySubtitle h3 {
     font-size: 34px;
     line-height: 22px;
   }
-  
+
   .backgroundImage {
     height: 500px;
   }
-  
+
   .centerImage {
     height: 150px;
   }
-  
+
   .blurredSpot {
     width: 400px;
     height: 70px;
     top: 100px;
     filter: blur(65px);
   }
-  
+
   .viewAllButton {
     width: 120px;
     height: 35px;
