--- a/app/globals.css
+++ b/app/globals.css
@@ -28,33 +28,33 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
-  max-width: 2300px;
-
-  margin: 0 auto;
-  background-color: #f5f5f5;
-}
-
-/* Оптимизация скролла для мобильных устройств */
-/* html {
-  -webkit-overflow-scrolling: touch;
-  scroll-behavior: smooth;
-  overscroll-behavior: none;
-} */
-
-/* body { */
-  /* -webkit-overflow-scrolling: touch;
-  overscroll-behavior: none; */
-  /* Убираем возможные проблемы с transform3d */
-  /* -webkit-transform: translateZ(0);
-  transform: translateZ(0); */
-  /* Улучшаем производительность скролла */
-  /* will-change: scroll-position; */
-  /* Максимальная ширина страницы и светло-серый фон */
   /* max-width: 2300px;
 
   margin: 0 auto;
   background-color: #f5f5f5; */
-/* } */
+}
+
+/* Оптимизация скролла для мобильных устройств */
+ html {
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+  overscroll-behavior: none;
+} 
+
+body { 
+ -webkit-overflow-scrolling: touch;
+  overscroll-behavior: none; 
+  /* Убираем возможные проблемы с transform3d */
+ -webkit-transform: translateZ(0);
+  transform: translateZ(0); 
+  /* Улучшаем производительность скролла */
+   will-change: scroll-position; 
+  /* Максимальная ширина страницы и светло-серый фон */
+   max-width: 2300px;
+
+  margin: 0 auto;
+  background-color: #f5f5f5; 
+}
 
 
 input,button,textarea{font-family:inherit;}
