--- a/app/comp/section3/section3.module.css
+++ b/app/comp/section3/section3.module.css
@@ -10,12 +10,12 @@
   );
   /* margin-top: 10vh; */
 }
-.container {
+/* .container {
   width: 100%;
   height: 70%;
   position: absolute;
   top: 22%;
-}
+} */
 .titleContainer {
   position: absolute;
   top: 2svh;
