--- a/app/comp/section3/section3.module.css
+++ b/app/comp/section3/section3.module.css
@@ -10,12 +10,12 @@
   );
   /* margin-top: 10vh; */
 }
-/* .container {
+.container {
   width: 100%;
   height: 70%;
   position: absolute;
   top: 22%;
-} */
+}
 .titleContainer {
   position: absolute;
   top: 2svh;
@@ -416,8 +416,14 @@
   .section3 {
     height: 105dvh;
   }
+  .container {
+    width: 100%;
+    height: 100%;
+   
+    top: 0;
+  }
   .titleContainer {
-    top: -40dvh;
+    top: -15dvh;
   }
  
  
@@ -429,7 +435,7 @@
   .cardsContainer {
    
     gap: 15px;
-    top: -20dvh;
+    top: 3dvh;
    
   }
  
