--- a/app/comp/section4/section4.module.css
+++ b/app/comp/section4/section4.module.css
@@ -1,27 +1,99 @@
-/* Background gradient: #E0D2CA at top -> #BECFDD at bottom */
 .section4 {
-  position: relative;
   width: 100%;
-  height: 85vh;
+  /* height: 100dvh; */
+  height: calc(var(--vh, 1vh) * 100);
+  background: #e2d3ce;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-@media (max-width: 480px) {
-  .exclusiveText {
-    position: absolute;
-    top: 100px;
-    left: calc(12px + 150px + 16px);
-    right: auto;
-    width: calc(100vw - (12px + 100px + 16px) - 12px);
-  }
-}
-
-.vector {
-  /* Vector */
+.backgroundImage {
   position: absolute;
-  top: 25svh;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 100%;
+  background-image: url('/comp_4/bg_mont.png');
+  background-size: cover;
+  background-position: center top 10dvh;
+  background-repeat: no-repeat;
+  z-index: 1;
+  mask: linear-gradient(to bottom, rgba(0,0,0,1) 70%, rgba(0,0,0,0) 100%);
+  -webkit-mask: linear-gradient(to bottom, rgba(0,0,0,1) 70%, rgba(0,0,0,0) 100%);
+}
+
+.leftImage {
+  position: absolute;
+  left: 15dvh;
+  top: 18dvh;
+  width: 137.76px;
+  height: 307.67px;
+  z-index: 2;
+}
+
+.rightImage {
+  position: absolute;
+  right: 15dvh;
+  top: 45dvh;
+  width: 144.65px;
+  height: 323.05px;
+  z-index: 2;
+}
+
+.additionalImage {
+  position: absolute;
+  right: 10dvh;
+  top: 18dvh;
+  width: 72.8px;
+  height: 162.59px;
+ 
+  z-index: 2;
+}
+
+.heroBlock {
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 6.5dvh;
+}
+
+.title {
+  width: 219px;
+  height: 116px;
+  color: var(--Style, rgba(12, 11, 16, 1));
+  font-family: Forum;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 58px;
+  letter-spacing: 0%;
+  text-align: left;
+  margin: 0;
+}
+
+.description {
+  width: 254px;
+  height: 185px;
+  color: rgba(0, 0, 0, 1);
+  font-family: Manrope;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 179.8%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin: 0;
+}
+
+.diamond {
+  position: absolute;
+  top: 40dvh;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 120px;
+  width: 105px;
   height: 200px;
   /* ромб через обрезку */
   clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
@@ -29,158 +101,84 @@
   backdrop-filter: blur(4px);
   background: rgba(255, 255, 255, 0.31);
   border: 1px solid rgba(255, 255, 255, 0.5);
-  z-index: 8;
+  z-index: 4;
 }
 
-/* Ромбы для изображений */
-.imageVector {
+.smallDiamond {
   position: absolute;
-  bottom: -5vh;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 50px;
-  height: 95px;
-  /* ромб через обрезку */
+  top: calc(18dvh + 307.67px - 40px); /* верхний край ромба на нижнем краю картинки */
+  left: calc(15dvh + 137.76px/2 - 24px); /* центрируем относительно картинки */
+  width: 43px; /* 120px * 0.4 = 48px (на 60% меньше) */
+  height: 80px; /* 200px * 0.4 = 80px (на 60% меньше) */
   clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
   box-sizing: border-box;
   backdrop-filter: blur(4px);
-  background: rgba(255, 255, 255, 0.31);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  z-index: 9;
- 
+  background: rgba(255, 255, 255, 0.411); /* увеличил прозрачность */
+
+  z-index: 5; /* увеличил z-index чтобы был поверх картинки */
 }
 
-
-.imgTwo .imageVector {
-  bottom: -3.5vh;
-  width: 35px;
-
-  height: 66.5px;
- 
-}
-
-.content {
-  margin-top: -20vh;
+.rightSmallDiamond {
   position: absolute;
-  z-index: 3;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
+  top: calc(45dvh + 323.05px - 40px); /* верхний край ромба на нижнем краю правой картинки */
+  right: calc(15dvh + 144.65px/2 - 24px); /* центрируем относительно правой картинки */
+  width: 43px;
+  height: 80px;
+  clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+  box-sizing: border-box;
+  backdrop-filter: blur(4px);
+  background: rgba(255, 255, 255, 0.411);
 
-.contentInner {
-  display: flex;
-  align-items: flex-start;
-  gap: 65px;
-
-  margin-top: 30px;
-}
-
-.leftCol {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.whyTitle {
-  width: 219px;
-  height: 58px;
-  color: rgba(12, 11, 16, 1);
-  font-family: Forum, serif;
-  font-size: 60px;
-  font-weight: 400;
-  line-height: 58px;
-  letter-spacing: 0%;
-  text-align: left;
-}
-
-.luxTrips {
-  margin-top: 15px;
-  /* spacing between Why and Lux Trips */
-  width: 219px;
-  height: 116px;
-  color: rgba(12, 11, 16, 1);
-  font-family: Forum, serif;
-  font-size: 60px;
-  font-weight: 400;
-  line-height: 58px;
-  letter-spacing: 0%;
-  text-align: left;
-}
-
-.rightText {
-  width: 254px;
-  height: 185px;
-  color: rgba(0, 0, 0, 1);
-  font-family: Manrope, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 32px;
-  letter-spacing: 0%;
-  text-align: left;
-}
-
-.bgMont {
-  position: absolute;
-  top: -100px;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 1100px;
-  z-index: 3;
-  pointer-events: none;
-}
-
-.bgMontImage {
-  object-fit: cover;
-  object-position: bottom center;
-  z-index: 3;
-}
-
-.gradient {
-  position: absolute;
-  top: -30vh;
-  left: 0;
-  width: 100%;
-  height: calc(60vh + 750px);
-
-  background: linear-gradient(to bottom, #e0d2ca 0%, #becfdd 40%, #e0d2ca 100%);
-  z-index: 1;
-  pointer-events: none;
-}
-
-/* Новый блок с заголовком и текстом Exclusive knowledge */
-.exclusiveKnowledge {
-  position: absolute;
-  top: 540px;
-  left: 28vw;
   z-index: 5;
-  display: flex;
-  gap: 30px;
-  align-items: flex-start;
 }
 
-.exclusiveTitle {
+.additionalSmallDiamond {
+  position: absolute;
+  top: calc(18dvh + 162.59px - 20px); /* верхний край ромба на нижнем краю дополнительной картинки */
+  right: calc(10dvh + 72.8px/2 - 12px); /* центрируем относительно дополнительной картинки */
+  width: 21px; /* пропорционально уменьшенный размер */
+  height: 40px; /* пропорционально уменьшенный размер */
+  clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+  box-sizing: border-box;
+  backdrop-filter: blur(4px);
+  background: rgba(255, 255, 255, 0.411);
+
+  z-index: 5;
+}
+
+.bottomBlock {
+  position: absolute;
+  bottom: 5vh;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 6.5dvh;
+  z-index: 3;
+}
+
+.bottomTitle {
   width: 256px;
   height: 302px;
-  color: rgba(12, 11, 16, 1);
-  font-family: var(--font-forum), Forum, serif;
+  color: var(--Style, rgba(12, 11, 16, 1));
+  font-family: Forum;
   font-size: 40px;
   font-weight: 400;
-  line-height: 91.67%;
+  line-height: 44px;
   letter-spacing: 0%;
   text-align: left;
   margin: 0;
 }
 
-.exclusiveText {
+.bottomText {
   width: 255px;
   height: 191px;
   color: rgba(0, 0, 0, 1);
-  font-family: var(--font-manrope), Manrope, sans-serif;
+  font-family: Manrope;
   font-size: 16px;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 179.8%;
   letter-spacing: 0%;
   text-align: left;
   margin: 0;
@@ -188,365 +186,307 @@
 
 
 
-.cloudImage {
-  position: absolute;
-  top: 30%;
-  right: -700px;
 
-  width: 850px;
-  height: 350px;
-  z-index: 4;
-  pointer-events: none;
-}
+@media (min-width: 1700px) and (max-width: 2300px) {
 
-.cloudImg {
-  object-fit: contain;
-  object-position: center;
-  width: 100%;
-  height: 100%;
-}
-
-
-.floatingImages {
-  position: relative;
-  z-index: 4;
-}
-
-.imgOne,
-.imgTwo,
-.imgThree {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  pointer-events: none;
-}
-
-.imgOne {
-  left: 200px;
-  top: 0px;
-  width: 137.76px;
-  height: 307.67px;
-  border-radius: 10px;
-  overflow: visible;
-}
-
-.imgTwo {
-  right: 320px;
-  top: 100px;
-  width: 76px;
-  height: 184.06px;
-  border-radius: 10px;
-  overflow: visible;
-}
-
-.imgThree {
-  right: 140px;
-  top: 310px;
-  width: 145px;
-  height: 323px;
-  border-radius: 10px;
-  overflow: visible;
-}
-
-/* Сохраняем скругление углов у изображений при видимом overflow у контейнера */
-.imgOne img,
-.imgTwo img,
-.imgThree img {
-  border-radius: 10px;
-  display: block;
-}
-
-@media (max-width: 1200px) {
-  .content {
-    margin-top: -25vh;
-  }
-
-  .exclusiveKnowledge {
-    top: 540px;
-    left: 10vw;
-  }
-}
-
-@media (max-width: 1000px) {
-  .contentInner {
-    gap: 55px;
-  }
-
-  .whyTitle {
-    font-size: 50px;
-  }
-
-  .luxTrips {
-    font-size: 50px;
-  }
-
-  .rightText {
-    font-size: 14px;
-  }
-  .exclusiveKnowledge {
-    top: 540px;
-    left: 5vw;
-  }
-
-  .exclusiveTitle {
-    width: 256px;
-    height: 302px;
-
-    font-size: 32px;
-
-    line-height: 91.67%;
-  }
-
-  .exclusiveText {
-    width: 255px;
-    height: 191px;
-
-    font-size: 14px;
-
-    line-height: 30px;
-  }
-  .imgOne {
-    left: 100px;
-    top: 0px;
-    width: 118px;
-    height: 288px;
-  }
-
-  .imgTwo {
-    right: 200px;
-    top: 100px;
-    width: 66px;
-    height: 174px;
-  }
-  .imgThree {
-    right: 50px;
-    top: 310px;
-    width: 125px;
-    height: 303px;
-  }
-  .vector {
-    top: 25svh;
-    left: 50%;
-
-    width: 100px;
-    height: 180px;
-  }
-}
-
-@media (max-width: 768px) {
-  .contentInner {
-   
-    gap: 15px;
-
-    margin-top: 210px;
-  }
-  .bgMont {
-   
-    margin-top: 150px;
-     height: 900px;
-    
-   }
-  .exclusiveKnowledge {
-    width: 100%;
-    top: 540px;
-    left: 5vw;
-  }
-
-  .exclusiveTitle {
-    width: 240px;
-    height: auto;
-
-    font-size: 5.5vw;
-  }
-  .gradient {
-    top: -10vh;
-  }
-  .exclusiveText {
-    position: absolute;
-    top: 100px;
-    right: 60px;
-    width: 200px;
-    height: auto;
-
-    font-size: 14px;
-
-    line-height: 20px;
-  }
-  .imgOne {
-    left: 30px;
-    top: 150px;
-    width: 105px;
-    height: 270px;
-  }
-
-  .imgTwo {
-  display: none;
-  }
-  .imgThree {
-    right: 30px;
-    top: 310px;
-    width: 110px;
-    height: 283px;
-  }
-  .imageVector {
+  .heroBlock {
   
-    bottom: -4.2vh;
+    gap: 12vh;
+  }
+  .leftImage {
   
-  
-    width: 40px;
-    height: 85px;
-    
-   
-  }
-  .vector {
-    top: 33svh;
-    left: 50%;
-
-    width: 80px;
-    height: 160px;
-  }
-}
-
-@media (max-width: 600px) {
-  .contentInner {
-    flex-direction: column;
-    gap: 15px;
-
-    margin-top: 180px;
-  }
-  .vector {
-    top: 33svh;
-    left: 50%;
-
-    width: 80px;
-    height: 160px;
-  }
-  .whyTitle {
-    font-size: 40px;
-    height: 40px;
-  }
-
-  .luxTrips {
-    font-size: 40px;
-    margin-top: 0px;
-    height: 70px;
-  }
-
-  .rightText {
-    font-size: 12px;
-    width: 80vw;
-    height: 185px;
-
-    line-height: 22px;
-  }
-}
-
-@media (max-width: 480px) {
-  /* .section4 {
-   
-    height: 140vh;
-  } */
-  .bgMont {
-   
-   margin-top: 250px;
-    height: 400px;
+    left: 15dvh;
+    top: 18dvh;
+    width: 157.76px;
+    height: 337.67px;
    
   }
   
-
-  .gradient {
-    top: 0vh;
+  .rightImage {
+   
+    right: 15dvh;
+    top: 45dvh;
+    width: 164.65px;
+    height: 353.05px;
+   
   }
-
-  .contentInner {
-    margin-top: 28vh;
-    flex-direction: column;
-    gap:0px;
-
+  .additionalImage {
+   
+    right: 10dvh;
+    top: 15dvh;
+    width: 92.8px;
+    height: 192.59px;
+  }
+  .smallDiamond {
+   
+    top: calc(21dvh + 307.67px - 40px); 
+    left: calc(16.6dvh + 137.76px/2 - 24px); /* центрируем относительно картинки */
+    width: 43px; /* 120px * 0.4 = 48px (на 60% меньше) */
+    height: 80px; /* 200px * 0.4 = 80px (на 60% меньше) */
  
   }
-  .vector {
-    top: 37svh;
-    left: 50%;
-
-    width: 50px;
-    height: 100px;
-  }
-  .whyTitle {
-    font-size: 36px;
-    height: 40px;
-  }
-
-  .luxTrips {
-    font-size: 36px;
-    margin-top: 0px;
-    height: 70px;
-  }
-
-  .rightText {
-    font-size: 12px;
-    width: 80vw;
-    height: auto;
+  
+  .rightSmallDiamond {
    
-
-    line-height: 20px;
+    top: calc(48dvh + 323.05px - 40px); /* верхний край ромба на нижнем краю правой картинки */
+    right: calc(16.6vh + 144.65px/2 - 24px); /* центрируем относительно правой картинки */
+    width: 43px;
+    height: 80px;
+   
   }
-  .exclusiveTitle {
-    width: 240px;
-    height: auto;
-margin-top: -8vh;
-    font-size: 7.5vw;
-  }
-  .exclusiveText {
   
-    font-size: clamp(11px, 3.5vw, 14px);
-    line-height: 1.4;
+  .additionalSmallDiamond {
+   
+    top: calc(18dvh + 162.59px - 20px); /* верхний край ромба на нижнем краю дополнительной картинки */
+    right: calc(10.7dvh + 72.8px/2 - 12px); /* центрируем относительно дополнительной картинки */
+    width: 22px; /* пропорционально уменьшенный размер */
+    height: 41px; /* пропорционально уменьшенный размер */
+   
   }
-  .imgOne {
-    left: 30px;
-    top: 28vh;
-    width: 90px;
-    height: 200px;
-  }
-
-  .imgTwo {
-    display: none;
-  }
-  .imgThree {
-    right: 30px;
-    top: 310px;
-    width: 100px;
-    height: 200px;
-  }
-  .imageVector {
-  
-    bottom: -3.6vh;
-  
-  
-    width: 30px;
-    height: 60px;
+  .bottomBlock {
+   
+    gap: 12dvh;
     
+  }
+  
+}
+
+
+@media (min-width: 900px) and (max-width: 1200px) {
+  .backgroundImage {
+   
+  
+    width: 100%;
+    height: 80%;
    
   }
-  /* Планирование: текст справа от изображения и выравнивание левого края */
-  .planningSection {
-    position: relative;
+  
+  .diamond {
+   
+    top: 35dvh;
+   
+    width: 90px;
+    height: 180px;
+   
   }
-  .planningImage {
-    position: absolute;
-    left: 12px;
-    width: 100px;
-    height: 200px;
+  
+  .bottomBlock {
+   
+    bottom: 7vh;
+    left: 35%;
+   
+    gap: 2dvh;
+    z-index: 3;
   }
-  .planningContent {
-    position: absolute;
-    left: calc(12px + 100px + 16px);
-    width: calc(100vw - (12px + 100px + 16px) - 12px);
-    top: 0;
+  .bottomTitle {
+   
+    font-size: 36px;
+    line-height: 38px;
   }
-  .planningText {
-    margin: 0;
+}
+
+
+
+@media (min-width: 768px) and (max-width: 900px) {
+  .heroBlock {
+   
+    gap: 0dvh;
+  }
+  
+  .title {
+    
+    font-size: 50px;
+   
+    line-height: 50px;
+   
+  }
+  
+  .description {
+    width: 254px;
+    height: 185px;
+    
+    font-size: 16px;
+   
+    line-height: 160%;
+   
+  }
+  .backgroundImage {
+   
+  
+    width: 100%;
+    height: 80%;
+   
+  }
+  .diamond {
+   
+    top: 35dvh;
+   
+    width: 90px;
+    height: 180px;
+   
+  }
+  
+  .bottomBlock {
+   
+    bottom: 7vh;
+    left: 38%;
+   
+    gap: 2dvh;
+    z-index: 3;
+  }
+  .bottomTitle {
+   
+    font-size: 36px;
+    line-height: 38px;
+  }
+  .leftImage {
+  
+    left: 7dvh;
+    top: 18dvh;
+    width: 127.76px;
+    height: 300px;
+   
+  }
+  
+  .rightImage {
+   
+    right: 4dvh;
+    top: 45dvh;
+    width: 134.65px;
+    height: 303.05px;
+   
+  }
+  .additionalImage {
+   
+    right: 2dvh;
+    top: 15dvh;
+    width: 72.8px;
+    height: 162.59px;
+  }
+  .smallDiamond {
+   
+    top: calc(17.5dvh + 307.67px - 40px); 
+    left: calc(7.1dvh + 137.76px/2 - 24px); /* центрируем относительно картинки */
+    width: 38px; /* 120px * 0.4 = 48px (на 60% меньше) */
+    height: 70px; /* 200px * 0.4 = 80px (на 60% меньше) */
+ 
+  }
+  
+  .rightSmallDiamond {
+   
+    top: calc(43dvh + 323.05px - 40px); /* верхний край ромба на нижнем краю правой картинки */
+    right: calc(4dvh + 144.65px/2 - 24px); /* центрируем относительно правой картинки */
+    width: 38px;
+    height: 70px;
+   
+  }
+  
+  .additionalSmallDiamond {
+   
+    top: calc(15dvh + 162.59px - 20px); /* верхний край ромба на нижнем краю дополнительной картинки */
+    right: calc(2dvh + 72.8px/2 - 12px); /* центрируем относительно дополнительной картинки */
+    width: 22px; /* пропорционально уменьшенный размер */
+    height: 41px; /* пропорционально уменьшенный размер */
+   
+  }
+}
+
+
+@media (min-width: 480px) and (max-width: 768px) {
+
+  .heroBlock {
+   
+    gap: 0dvh;
+  }
+  
+  .title {
+    
+    font-size: 50px;
+   
+    line-height: 50px;
+   
+  }
+  
+  .description {
+    width: 254px;
+    height: 185px;
+    
+    font-size: 16px;
+   
+    line-height: 160%;
+   
+  }
+  .backgroundImage {
+   
+  
+    width: 100%;
+    height: 80%;
+   
+  }
+  .diamond {
+   
+    top: 35dvh;
+   
+    width: 90px;
+    height: 180px;
+   
+  }
+  
+  .bottomBlock {
+   
+    bottom: 7vh;
+    left: 38%;
+   
+    gap: 2dvh;
+    z-index: 3;
+  }
+  .bottomTitle {
+   
+    font-size: 36px;
+    line-height: 38px;
+  }
+  .leftImage {
+  
+    left: 7dvh;
+    top: 18dvh;
+    width: 127.76px;
+    height: 300px;
+   
+  }
+  
+  .rightImage {
+   
+    right: 4dvh;
+    top: 45dvh;
+    width: 134.65px;
+    height: 303.05px;
+   
+  }
+  .additionalImage {
+   
+  display: none;
+  }
+  .smallDiamond {
+   
+    top: calc(17.5dvh + 307.67px - 40px); 
+    left: calc(7.1dvh + 137.76px/2 - 24px); /* центрируем относительно картинки */
+    width: 38px; /* 120px * 0.4 = 48px (на 60% меньше) */
+    height: 70px; /* 200px * 0.4 = 80px (на 60% меньше) */
+ 
+  }
+  
+  .rightSmallDiamond {
+   
+    top: calc(43dvh + 323.05px - 40px); /* верхний край ромба на нижнем краю правой картинки */
+    right: calc(4dvh + 144.65px/2 - 24px); /* центрируем относительно правой картинки */
+    width: 38px;
+    height: 70px;
+   
+  }
+  
+  .additionalSmallDiamond {
+   
+   display: none;
+   
   }
 }
