--- a/app/comp/section5/section5.module.css
+++ b/app/comp/section5/section5.module.css
@@ -1,6 +1,7 @@
 .section5 {
   width: 100%;
-  height: 70vh;
+  /* height: 70dvh; */
+  height: calc(var(--vh, 1vh) * 100);
   background-color: #E0D2CA;
   position: relative;
  
@@ -39,7 +40,7 @@
 
 .imageBox {
   position: absolute;
-  top: -10vh;
+  top: -8vh;
   left: 20.31vw;
   width: 244.48px;
   height: 546px;
@@ -315,7 +316,8 @@
 
 @media (max-width: 480px) {
   .section5 {
-    height: 75vh; 
+    height: calc(var(--vh, 1vh) * 100);
+    /* height: 75vh;  */
     /* padding: 60px 12px 100px; */
   }
   .imageBox {
