--- a/app/comp/section3/section3.module.css
+++ b/app/comp/section3/section3.module.css
@@ -1,6 +1,7 @@
 .section3 {
   position: relative;
-  height: 125vh;
+  height: calc(var(--vh, 1vh) * 100);
+  /* height: 125vh; */
   width: 100%;
   background: linear-gradient(
     to bottom,
@@ -10,12 +11,12 @@
   );
   /* margin-top: 10vh; */
 }
-.container {
+/* .container {
   width: 100%;
   height: 70%;
   position: absolute;
   top: 22%;
-}
+} */
 .titleContainer {
   position: absolute;
   top: 2svh;
@@ -414,17 +415,17 @@
 @media (max-width: 480px) {
 
   .section3 {
-    height: calc(var(--vh, 1vh) * 100);
+    height: calc(var(--vh, 1vh) * 115);
     /* height: 150dvh; */
   }
-  .container {
+  /* .container {
     width: 100%;
     height: 100%;
    
     top: 0;
-  }
+  } */
   .titleContainer {
-    top: -10dvh;
+    top: 0dvh;
   }
  
  
@@ -436,7 +437,7 @@
   .cardsContainer {
    
     gap: 15px;
-    top: 16dvh;
+    top: 18dvh;
    
   }
  
