--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,10 @@
 
 
 :root {
-  --vh: 100%;
+  --vh: 1vh;
 }
 
 @supports (height: 100dvh) {
-  /* Современные браузеры */
   :root {
     --vh: 1dvh;
   }
