--- a/app/comp/section3/section3.module.css
+++ b/app/comp/section3/section3.module.css
@@ -1,7 +1,7 @@
 .section3 {
   position: relative;
-  height: calc(var(--vh, 1vh) * 100);
-  /* height: 125vh; */
+  /* Use consistent height units across all devices */
+  height: 100dvh;
   width: 100%;
   background: linear-gradient(
     to bottom,
@@ -9,7 +9,6 @@
     transparent 1%,
     #e0d2ca 1%
   );
-  /* margin-top: 10vh; */
 }
 /* .container {
   width: 100%;
@@ -302,7 +301,8 @@
 
 @media (max-width: 768px) {
   .section3 {
-    height: 130svh;
+    /* Use dvh for better mobile compatibility */
+    height: 100dvh;
   }
   .titleContainer {
     top: -16svh;
@@ -360,7 +360,8 @@
 
 @media (max-width: 650px) {
   .section3 {
-    height: 110svh;
+    /* Consistent height on smaller screens */
+    height: 100dvh;
   }
   .titleContainer {
     top: -30svh;
@@ -413,10 +414,9 @@
 
 
 @media (max-width: 480px) {
-
   .section3 {
-    height: calc(var(--vh) * 130);
-    /* height: 150dvh; */
+    /* Use dynamic viewport height for best compatibility */
+    height: 128dvh;
   }
   /* .container {
     width: 100%;
